Mon Nov  3 14:42:37 2014  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_free): resolve memory leak.

Mon Nov  3 13:49:18 2014  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_memsize): catch up recent changes.

Mon Nov  3 13:38:28 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: change semantics of opt_num and opt_table.
	  `opt_num' was the number of optional parameters + 1.
	  `opt_table' has "opt_num" entries.

	  Change them to:
	  `opt_num' is the number of optional parameters.
	  `opt_talbe' has "opt_num + 1" entries.

	  This change simplify parameter fitting logics.

	* compile.c: catch up this change.

	* iseq.c: ditto.

	* proc.c: ditto.

	* vm_args.c: ditto.

Mon Nov  3 11:47:44 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* NEWS: added period into Matrix section. [ci skip]
	  [misc #10446][ruby-core:65987]

Mon Nov  3 09:43:30 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* vm_args.c: fixed build error with clang

Mon Nov  3 09:32:46 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/rfc3986_parser.rb (URI::RFC3986_Parser::RFC3986_URI):
	  allow '[' and ']' for URI input (and escape). [Bug #10402]

	* lib/uri/generic.rb (URI#query=): escape '[', '\', and ']'.

Mon Nov  3 07:49:34 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: change iseq parameter data structure.
	  https://bugs.ruby-lang.org/issues/10440#change-49694

	  * change terminology `arg' to `param'.
	  * move rb_iseq_t::arg_* to rb_iseq_t::param.
	  * move rb_iseq_t::arg_size to rb_iseq_t::param::size.
	  * move rb_iseq_t::argc to rb_iseq_t::param::lead_num.
	  * move rb_iseq_t::arg_opts to rb_iseq_t::param::opt_num.
	  * move rb_iseq_t::arg_rest to rb_iseq_t::param::rest_start.
	  * move rb_iseq_t::arg_post_num to rb_iseq_t::param::post_num.
	  * move rb_iseq_t::arg_post_start to rb_iseq_t::param::post_start.
	  * move rb_iseq_t::arg_block to rb_iseq_t::param::block_start.
	  * move rb_iseq_t::arg_keyword* to rb_iseq_t::param::keyword.