@@ -14,8 +14,7 @@ if defined?(OpenSSL)
             ensure
               server_ssl.close
             end
-          end,
-          :ignore_listener_error => false
+          end
       ) do |server, port|
         sock = TCPSocket.new("127.0.0.1", port)
         ssl = OpenSSL::SSL::SSLSocket.new(sock)
