@@ -26,7 +26,7 @@ tddwpBAEDjcwMzA5NTYzMTU1MzAwpQMCARM=
 -----END SSL SESSION PARAMETERS-----
     SESSION
 
-    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true) { |_, port|
+    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ignore_listener_error => true) { |_, port|
       ctx = OpenSSL::SSL::SSLContext.new
       ctx.session_cache_mode = OpenSSL::SSL::SSLContext::SESSION_CACHE_CLIENT
       ctx.session_id_context = self.object_id.to_s
@@ -45,7 +45,7 @@ tddwpBAEDjcwMzA5NTYzMTU1MzAwpQMCARM=
 
   def test_session
     timeout(5) do
-      start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ignore_listener_error => false) do |server, port|
+      start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true) do |server, port|
         sock = TCPSocket.new("127.0.0.1", port)
         ctx = OpenSSL::SSL::SSLContext.new("TLSv1")
         ssl = OpenSSL::SSL::SSLSocket.new(sock, ctx)
@@ -156,7 +156,7 @@ __EOS__
 
   def test_client_session
     last_session = nil
-    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ignore_listener_error => false) do |server, port|
+    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true) do |server, port|
       2.times do
         sock = TCPSocket.new("127.0.0.1", port)
         # Debian's openssl 0.9.8g-13 failed at assert(ssl.session_reused?),
@@ -242,7 +242,7 @@ __EOS__
     end
 
     first_session = nil
-    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ctx_proc => ctx_proc, :server_proc => server_proc, :ignore_listener_error => false) do |server, port|
+    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ctx_proc => ctx_proc, :server_proc => server_proc) do |server, port|
       10.times do |i|
         sock = TCPSocket.new("127.0.0.1", port)
         ctx = OpenSSL::SSL::SSLContext.new
@@ -292,7 +292,7 @@ __EOS__
       # any resulting value is OK (ignored)
     }
 
-    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ignore_listener_error => false) do |server, port|
+    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true) do |server, port|
       sock = TCPSocket.new("127.0.0.1", port)
       begin
         ssl = OpenSSL::SSL::SSLSocket.new(sock, ctx)
@@ -350,7 +350,7 @@ __EOS__
       c.session_cache_stats
       readwrite_loop(c, ssl)
     }
-    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ctx_proc => ctx_proc, :server_proc => server_proc, :ignore_listener_error => false) do |server, port|
+    start_server(PORT, OpenSSL::SSL::VERIFY_NONE, true, :ctx_proc => ctx_proc, :server_proc => server_proc) do |server, port|
       last_client_session = nil
       3.times do
         sock = TCPSocket.new("127.0.0.1", port)
