@@ -1,3 +1,8 @@
+Mon Nov  3 18:09:39 2014  Tanaka Akira  <akr@fsij.org>
+
+	* test/openssl/utils.rb: The default of :ignore_listener_error is
+	  changed to false.
+
 Mon Nov  3 14:42:37 2014  Koichi Sasada  <ko1@atdot.net>
 
 	* iseq.c (iseq_free): resolve memory leak.
